# burn-flex

./: ACKNOWLEDGMENTS.md  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARKS_CANDLE.md  BURN_BACKEND_TESTS_PR.md  COMPARISON.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  _typos.toml  audit.toml  migration-notes.md
.claude/: CLAUDE.md
.github/workflows/: test.yml
crates/burn-ember/: Cargo.toml  REDUCE_BENCHMARKS.md
crates/burn-ember/benches/: binary_ops.rs  comparison_ops.rs  conv_ops.rs  conv_transpose_ops.rs  cross_unfold_ops.rs  cumulative_ops.rs  deform_conv_ops.rs  gather_scatter_ops.rs  int_ops.rs  interpolate_ops.rs  matmul.rs  pool_ops.rs  reduce_ops.rs  slice_ops.rs  unary_ops.rs
crates/burn-ember/src/: backend.rs  layout.rs  lib.rs  qtensor.rs  strided_index.rs  tensor.rs
crates/burn-ember/src/ops/: activation.rs  binary.rs  bool.rs  comparison.rs  conv.rs  cumulative.rs  deform_conv.rs  expand.rs  flip.rs  float.rs  gather_scatter.rs  int.rs  interpolate.rs  mask.rs  matmul.rs  mod.rs  module.rs  pool.rs  qtensor.rs  reduce.rs  slice.rs  unary.rs  unfold.rs
crates/burn-ember/src/simd/: kernels.rs  mod.rs  neon.rs  portable.rs  scalar.rs
crates/burn-ember/tests/: generate_strided_reference.py  permuted_ops_compare.rs  strided_ops_compare.rs
crates/burn-flex/: Cargo.toml
crates/burn-flex-bench-candle/: Cargo.toml  README.md  UPSTREAM_ISSUE.md
crates/burn-flex-bench-candle/benches/: conv1d.rs  conv2d.rs  elementwise.rs  indexing.rs  matmul.rs  matmul_batched.rs  misc_ops.rs  pool2d.rs  reduce.rs  shape_ops.rs  transformer_ops.rs
crates/burn-flex/benches/: attention.rs  cat_max_min_ops.rs  conv_ops.rs  fft_ops.rs  norm_ops.rs  quantization_ops.rs
crates/burn-flex/src/: backend.rs  layout.rs  lib.rs  qtensor.rs  tensor.rs
crates/burn-flex/src/ops/: activation.rs  attention.rs  binary.rs  bool.rs  cat.rs  comparison.rs  conv.rs  cumulative.rs  deform_conv.rs  expand.rs  fft.rs  float.rs  gather_scatter.rs  grid_sample.rs  int.rs  interpolate.rs  mask.rs  matmul.rs  mod.rs  module.rs  pool.rs  qtensor.rs  reduce.rs  repeat_dim.rs  slice.rs  sort.rs  unary.rs  unfold.rs
crates/burn-flex/src/simd/: kernels.rs  mod.rs  portable.rs
crates/burn-flex/tests/: strided_ops_compare.rs
src/: backend.rs  lib.rs
src/ops/: activation.rs  bool.rs  float.rs  int.rs  module.rs  qtensor.rs  transaction.rs
xtask/: Cargo.toml
xtask/src/: main.rs
