[workspace]
resolver = "2"

members = ["crates/*", "xtask"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"

[workspace.dependencies]
burn-backend = { git = "https://github.com/tracel-ai/burn", version = "0.21" }
burn-std = { git = "https://github.com/tracel-ai/burn", version = "0.21" }
burn-tensor = { git = "https://github.com/tracel-ai/burn", version = "0.21" }
half = { version = "2", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }

# xtask
tracel-xtask = "=4.12.3"
strum = { version = "0.27.2", features = ["derive"] }
log = { version = "0.4", default-features = false }

[profile.dev]
debug = 1
