[workspace]
resolver = "2"

members = ["crates/*", "xtask"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"

[workspace.dependencies]
burn-backend = { git = "https://github.com/tracel-ai/burn.git", rev = "56a92664c7c5ea8a2697207b242bd1cc356afc4c", default-features = false }
burn-std = { git = "https://github.com/tracel-ai/burn.git", rev = "56a92664c7c5ea8a2697207b242bd1cc356afc4c", default-features = false }
burn-tensor = { git = "https://github.com/tracel-ai/burn.git", rev = "56a92664c7c5ea8a2697207b242bd1cc356afc4c" }
burn-ir = { git = "https://github.com/tracel-ai/burn.git", rev = "56a92664c7c5ea8a2697207b242bd1cc356afc4c", default-features = false }
burn-ndarray = { git = "https://github.com/tracel-ai/burn.git", rev = "56a92664c7c5ea8a2697207b242bd1cc356afc4c" }

# Uncomment for local testing with burn-backend-tests:
# burn-backend = { path = "/Users/dilshod/Projects/burn-flex-worktree/crates/burn-backend" }
# burn-std = { path = "/Users/dilshod/Projects/burn-flex-worktree/crates/burn-std" }
# burn-tensor = { path = "/Users/dilshod/Projects/burn-flex-worktree/crates/burn-tensor" }
# burn-ir = { path = "/Users/dilshod/Projects/burn-flex-worktree/crates/burn-ir", default-features = false }
# burn-ndarray = { path = "/Users/dilshod/Projects/burn-flex-worktree/crates/burn-ndarray" }

half = { version = "2", default-features = false, features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

gemm = { version = "0.18", default-features = false, features = ["f16"] }
macerator = { version = "0.3.0" }
aligned-vec = { version = "0.6" }

# benchmarks
divan = "0.1"

# parallelism
rayon = "1.10"

# xtask
tracel-xtask = "=4.12.3"
strum = { version = "0.27.2", features = ["derive"] }
log = { version = "0.4", default-features = false }

[profile.dev]
debug = 1
