[workspace]
resolver = "2"

members = ["crates/*", "xtask"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_html_tags = "deny"

[workspace.dependencies]
burn-backend = { version = "0.21.0-pre.3", default-features = false }
burn-std = { version = "0.21.0-pre.3", default-features = false }
burn-tensor = { version = "0.21.0-pre.3" }
burn-ir = { version = "0.21.0-pre.3", default-features = false }
burn-ndarray = { version = "0.21.0-pre.3" }

# Uncomment for local testing with burn-backend-tests:
# burn-backend = { path = "/Users/dilshod/Projects/burn-flex-worktree/crates/burn-backend" }
# burn-std = { path = "/Users/dilshod/Projects/burn-flex-worktree/crates/burn-std" }
# burn-tensor = { path = "/Users/dilshod/Projects/burn-flex-worktree/crates/burn-tensor" }
# burn-ir = { path = "/Users/dilshod/Projects/burn-flex-worktree/crates/burn-ir", default-features = false }
# burn-ndarray = { path = "/Users/dilshod/Projects/burn-flex-worktree/crates/burn-ndarray" }

half = { version = "2.7.1", default-features = false, features = ["bytemuck"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }

gemm = { version = "0.19", default-features = false, features = ["f16"] }
macerator = { version = "0.3.0" }
aligned-vec = { version = "0.6" }

# benchmarks
divan = "0.1"

# parallelism
rayon = "1.10.0"

# xtask
tracel-xtask = "=4.13.5"
strum = { version = "0.28.0", features = ["derive"] }
log = { version = "0.4.29", default-features = false }

[profile.dev]
debug = 1
