[package]
name = "burn-ember"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "A fast, portable CPU backend for Burn"
repository = "https://github.com/antimora/burn-ember"
readme = false
authors = ["Dilshod Tadjibaev (@antimora)"]

exclude = ["*.md"]

[lints]
workspace = true

[features]
default = ["std"]
std = []

[dependencies]
burn-backend = { workspace = true }
burn-std = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
burn-tensor = { workspace = true }
