[package]
name = "burn-ember"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "A fast, portable CPU backend for Burn"
repository = "https://github.com/antimora/burn-ember"
readme = false
authors = ["Dilshod Tadjibaev (@antimora)"]

exclude = ["*.md"]

[lints]
workspace = true

[features]
default = ["std", "simd", "gemm"]
std = []
simd = []  # Enable SIMD optimizations (NEON/AVX2)
rayon = ["dep:rayon"]  # Enable parallel execution for large tensors
gemm = ["dep:gemm"]  # Enable optimized matrix multiplication

[dependencies]
burn-backend = { workspace = true }
burn-std = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true, optional = true }
gemm = { version = "0.18", optional = true }

[dev-dependencies]
burn-tensor = { workspace = true }
burn-ndarray = { workspace = true }
divan = { workspace = true }

[[bench]]
name = "binary_ops"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "slice_ops"
harness = false

[[bench]]
name = "reduce_ops"
harness = false
