[package]
name = "burn-flex"
version = "0.21.0-pre.2"
edition.workspace = true
license.workspace = true
description = "A fast, portable CPU backend for Burn"
repository = "https://github.com/antimora/burn-flex"
readme = false
authors = ["Dilshod Tadjibaev (@antimora)"]

exclude = ["*.md"]

[lints]
workspace = true

[features]
default = ["std", "simd", "rayon"]
std = ["gemm/std", "burn-backend/std", "burn-std/std", "half/std"]
simd = ["dep:macerator", "dep:aligned-vec"]  # Enable SIMD optimizations via macerator (portable across architectures)
rayon = ["dep:rayon", "gemm/rayon"]  # Enable parallel execution for large tensors
tracing = ["burn-std/tracing", "burn-backend/tracing", "burn-ir/tracing"]
critical-section = ["dep:once_cell", "once_cell/critical-section", "dep:portable-atomic", "portable-atomic/critical-section"]

[dependencies]
burn-backend = { workspace = true }
burn-ir = { workspace = true }
burn-std = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }
libm = { version = "0.2", default-features = false }
rayon = { workspace = true, optional = true }
gemm = { workspace = true }
macerator = { workspace = true, optional = true }
aligned-vec = { workspace = true, optional = true }
once_cell = { version = "1", default-features = false, optional = true }
portable-atomic = { version = "1", optional = true }
portable-atomic-util = { version = "0.2", default-features = false, features = ["alloc"] }

[dev-dependencies]
burn-tensor = { workspace = true }
burn-ndarray = { workspace = true }
divan = { workspace = true }

[[bench]]
name = "attention"
harness = false

[[bench]]
name = "binary_ops"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "slice_ops"
harness = false

[[bench]]
name = "reduce_ops"
harness = false

[[bench]]
name = "unary_ops"
harness = false

[[bench]]
name = "comparison_ops"
harness = false

[[bench]]
name = "conv_ops"
harness = false

[[bench]]
name = "pool_ops"
harness = false

[[bench]]
name = "conv_transpose_ops"
harness = false

[[bench]]
name = "interpolate_ops"
harness = false

[[bench]]
name = "gather_scatter_ops"
harness = false

[[bench]]
name = "cumulative_ops"
harness = false

[[bench]]
name = "cross_unfold_ops"
harness = false

[[bench]]
name = "int_ops"
harness = false

[[bench]]
name = "deform_conv_ops"
harness = false

[[bench]]
name = "quantization_ops"
harness = false

[[bench]]
name = "cat_max_min_ops"
harness = false

[[bench]]
name = "default_ops"
harness = false
